--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -38,6 +38,7 @@
               <li><a class="dropdown-item" href="/forums/create-job">Create Selenuium Cronjob</a></li>
               <li><a class="dropdown-item" href="/forums/update-job">Update Selenium Cronjob</a></li>
               <li><a class="dropdown-item" href="/forums/mass-update">Mass Update Selenium Cronjobs</a></li>
+              <li><a class="dropdown-item" href="/forums/mass-create">Mass Create Selenium Cronjobs</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -117,7 +118,7 @@
                   </div>
               </div>
           </div>
-            <div class="col">
+          <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Kick Off Selenium Pipeline</h5>
@@ -125,7 +126,16 @@
                         <a href="/forums/start-pipeline" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
+          </div>
+          <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Mass Create Selenium Cronjob Schedule Files</h5>
+                    <p class="card-text">Allows the user to upload a Excel sheet (a sample is provided) to mass create Seleniuim Cronjob Schedule Files for OpenShift </p>
+                    <a href="/forums/mass-create" class="btn btn-primary">Go to Link</a>
+                </div>
             </div>
+        </div>
         </div>
       </div>
     <link href="/css/flaty-bootstrap.css" rel="stylesheet">
