--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -53,7 +53,7 @@
     </div>
   </nav>
       <BR>
-      <center><h2>FFM Selenium Cronjob Reports and Utilities</h2></center>
+      <center><h2>Selenium Cronjob Reports and Utilities</h2></center>
       <BR>
       <div class="row row-cols-4 row-cols-md 2 g-4">
           <div class="col">
